Backport sync commit from 1.20.4: Code sync refactoring, Basic Lever, Button, and Pulse Button added, TICKRATE ignores intr.